@@ -64,6 +64,9 @@ and Marcelo Vanzin for contributing to this release.
 
 - java installer refuses to install from a directory containing exclamation
   marks (SF.net bug #2065330 - Eric Le Lay)
+
+- don't log an error when the API docs are not available. Provide a link
+  to the online docs instead (SF.net bug #2934360 - Eric Le Lay)
 }}}
 {{{ API changes
 - Register api changed, it now contains Transferable (Matthieu Casanova)
